--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Constantoin Gierczak--Galle # the main title
+title: Constantin Gierczak--Galle # the main title
 
 tagline: Cybersecurity expert and software engineer # it will display as the subtitle
 
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+    baseurl: "https://cst1.fr/"
 
 # ------------ The following options are not recommended to be modified ------------------
 
