--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,11 @@ url: "https://cst1.fr"
 github:
   username: cs-t1 # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+#twitter:
+#  username: twitter_username # change to your Twitter username
+
+linkedin:
+  username: constantin-gierczak-galle-1055a9198
 
 social:
   # Change to your full name.
